chore: update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
-aiohttp==3.8.5
+aiohttp==3.9.5
 aiosignal==1.3.1
-annotated-types==0.5.0
+annotated-types==0.6.0
 async-timeout==4.0.3
-attrs==23.1.0
-certifi==2023.7.22
-charset-normalizer==3.2.0
-discord-webhook==1.3.0
-frozenlist==1.4.0
-genshin==1.6.1
-idna==3.4
-multidict==6.0.4
-pydantic==2.3.0
-pydantic_core==2.6.3
+attrs==23.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+discord-webhook==1.3.1
+frozenlist==1.4.1
+genshin==1.6.3
+idna==3.7
+multidict==6.0.5
+pyasn1==0.5.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pypng==0.20220715.0
+qrcode==7.4.2
 requests==2.31.0
-typing_extensions==4.7.1
-urllib3==2.0.4
-yarl==1.9.2
+rsa==4.9
+typing_extensions==4.11.0
+urllib3==2.2.1
+yarl==1.9.4
